# qt_tests

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  egabi.cpp  egabi.h
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/gui/canvas/: CMakeLists.txt  glwidget.cpp  glwidget.h  logo.cpp  logo.h  transform3D.cpp  transform3D.h  vertex.h
src/gui/gl/: glwidget.cpp  glwidget.h  logo.cpp  logo.h
src/gui/shaders/: logoShaderSource.frag  logoShaderSource.vert  logoShaderSourceCore.frag  logoShaderSourceCore.vert
